--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Scpproject.org : Static site for scpproject.org" />
+    <meta name="description" content="scpproject.org : Static site for scpproject.org" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -16,33 +16,18 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/cwilper/scpproject.org">Fork Me on GitHub</a>
-
-          <h1 id="project_title">scpproject.org</h1>
-          <h2 id="project_tagline">Static site for scpproject.org</h2>
+          <h1 id="project_title">Semantic Content Packages</h1>
+          <h2 id="project_tagline">Triples and Blobs with a URI</h2>
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>Welcome.</h3>
-
-<p>This site is currently empty.</p>
-
-<h3>Okay, I lied.</h3>
-
-<p><a href="ontology#">Here's an OWL ontology.</a></p>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">scpproject.org maintained by <a href="https://github.com/cwilper">cwilper</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
+<ul>
+<li> <a href="http://example.org/scp-pre-draft.txt">Draft Specification</a></li>
+<li> <a href="ontology#"> http://scpproject.org/ontology#</a></li>
+</ul>
+</div>
   </body>
 </html>
