--- a/index.html
+++ b/index.html
@@ -16,18 +16,22 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
+          <center>
           <h1 id="project_title">Semantic Content Packages</h1>
-          <h2 id="project_tagline">Triples and Blobs with a URI</h2>
+          <h2 id="project_tagline">Bring Your Own Vocabulary.</h2>
+          </center>
         </header>
     </div>
 
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-<ul>
-<li> <a href="http://example.org/scp-pre-draft.txt">Draft Specification</a></li>
-<li> <a href="ontology#"> http://scpproject.org/ontology#</a></li>
-</ul>
+      <center>
+[ <a href="http://example.org/scp-pre-draft.txt">Draft Specification</a> |
+<a href="ontology#">SCP Ontology</a> ]<br/>
+<img src="images/sketch.png"/><br/>
+Blobs, Triples, and a URI.
+</center>
 </div>
   </body>
 </html>
