add inline docs & improve top page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <section id="main_content" class="inner">
       <center>
 [ <a href="http://example.org/scp-pre-draft.txt">Draft Specification</a> |
-<a href="ontology#">SCP Ontology</a> ]<br/>
+<a href="ontology#">Draft Ontology</a> ]<br/>
 <img src="images/sketch.png"/><br/>
 Blobs, Triples, and a URI.
 </center>
