--- a/ontology/index.html
+++ b/ontology/index.html
@@ -1,30 +1,80 @@
 <pre>
+#####################################################
+#    Semantic Content Package OWL-Lite Ontology     #
+#            DRAFT, 2012-04-13, cwilper             #
+#                                                   #
+# SCP defines a minimal RDF vocabulary in order to: #
+#                                                   #
+#   o  Provide a uniform, but OPTIONAL way to refer #
+#      to content within a package so it can be     #
+#      described by other, more appropriate         #
+#      vocabularies.                                #
+#                                                   #
+#   o  Allow packages to declare the compound data  #
+#      models, if any, to which they conform.       #
+#                                                   #
+#####################################################
+
+#
 # Namespaces
+#
 @prefix owl:  &lt;http://www.w3.org/2002/07/owl#&gt; .
 @prefix rdf:  &lt;http://www.w3.org/1999/02/22-rdf-syntax-ns#&gt; .
 @prefix rdfs: &lt;http://www.w3.org/2000/01/rdf-schema#&gt; .
 @prefix scp:  &lt;http://scpproject.org/ontology#&gt; .
 
+#
 # Classes
+#
+
+# A specific sequence of octets that exists conceptually regardless
+# of where the content might be found. The "location" property
+# refers to a ContentLocation. A Bytestream may refer to any number
+# of ContentLocations.
 scp:Bytestream      rdf:type        owl:Class .
+
+# Indicates where the content of a Bytestream is expected to be found.
+# Two subclasses are defined.
 scp:ContentLocation rdf:type        owl:Class .
+
+# A kind of ContentLocation with a URI that can be dereferenced.
 scp:ResolvableURI   rdfs:subClassOf scp:ContentLocation .
+
+# A kind of ContentLocation that points to a path within a package.
+# The "path" property refers to a Plain Literal value, such as
+# "path/to/file.txt", and the "inPackage" property refers to the
+# Package.
 scp:PackagePath     rdfs:subClassOf scp:ContentLocation .
+
+# A container for content and statements. The "type" property refers
+# to a PackageType. A Package may assert that it has any number of
+# PackageTypes.
 scp:Package         rdf:type        owl:Class .
+
+# A particular kind of package. Some sort of data model is usually
+# associated with a PackageType, but the means by which package types
+# are described or represented is not expected to be uniform, nor
+# is a method suggested by the SCP specification.
 scp:PackageType     rdf:type        owl:Class .
 
+#
 # Properties
+#
+
 scp:location  rdf:type    owl:ObjectProperty ;
               rdfs:domain scp:Bytestream ;
               rdfs:range  scp:ContentLocation .
+
 scp:path      rdf:type    owl:DatatypeProperty ,
                           owl:FunctionalProperty ;
               rdfs:domain scp:PackagePath ;
               rdfs:range  rdf:PlainLiteral .
+
 scp:inPackage rdf:type    owl:ObjectProperty ,
                           owl:FunctionalProperty ;
               rdfs:domain scp:PackagePath ;
               rdfs:range  scp:Package .
+
 scp:type      rdf:type    owl:ObjectProperty ;
               rdfs:domain scp:Package ;
               rdfs:range  scp:PackageType .
