--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="scpproject.org : Static site for scpproject.org" />
+    <meta name="description" content="Semantic Content Packages" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>scpproject.org</title>
+    <title>Semantic Content Packages</title>
   </head>
 
   <body>
